// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VirtualList only show loader when reloading 1`] = `
<div
  className="VirtualList__holder"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="VirtualList__wrapper"
    onScroll={[Function]}
    style={
      Object {
        "height": 100,
      }
    }
  >
    <p
      className="VirtualList__loader"
    >
      数据加载中
    </p>
  </div>
</div>
`;

exports[`VirtualList show list and loader when fetching more 1`] = `
<div
  className="VirtualList__holder"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="VirtualList__wrapper"
    onScroll={[Function]}
    style={
      Object {
        "height": 100,
      }
    }
  >
    <div
      className="VirtualList"
      style={
        Object {
          "height": 10,
          "width": "100%",
        }
      }
    >
      <div>
        item
      </div>
    </div>
    <p
      className="VirtualList__loader"
    >
      数据加载中
    </p>
  </div>
</div>
`;

exports[`VirtualList show no data placeholder when data array is empty 1`] = `
<div
  className="VirtualList__holder"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="VirtualList__wrapper"
    onScroll={[Function]}
    style={
      Object {
        "height": 100,
      }
    }
  >
    <p
      className="VirtualList__placeholder"
    >
      暂无数据
    </p>
  </div>
</div>
`;

exports[`VirtualList show no more data hint when all data fetched 1`] = `
<div
  className="VirtualList__holder"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="VirtualList__wrapper"
    onScroll={[Function]}
    style={
      Object {
        "height": 100,
      }
    }
  >
    <div
      className="VirtualList"
      style={
        Object {
          "height": 10,
          "width": "100%",
        }
      }
    >
      <div>
        item
      </div>
    </div>
    <p
      className="VirtualList__no-more-hint"
    >
      没有更多信息
    </p>
  </div>
</div>
`;
